file: Add templates/index.html

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}page{% endblock %}</title>
+    <title>{% block title %}Page Title{% endblock %}</title>
     {% block css_ref %}{% endblock %}
     {% block js_ref %}{% endblock %}
 </head>
