--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,7 +4,7 @@
 
 {% block body %}
   <h2>Log In</h2>
-  <form method="post">
+  <form method="post" novalidate>
     {% csrf_token %}
     {{ login_form.as_p }}
     <button type="submit">Log In</button>
