improvement: Making index page dynamic in showing login and signup page (templates/index.html)

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,4 +5,8 @@
 {% block body %}
   <h1>Index</h1>
   <p>Hey dude welcome.</p>
+  <div>
+    <a href="{{ login_url }}">Login Page</a>
+    <a href="{{ signup_url }}">Sign Up Page</a>
+  </div>
 {% endblock %}
