--- a/templates/panel/dashboard.html
+++ b/templates/panel/dashboard.html
@@ -4,6 +4,6 @@
 
 {% block body %}
     <div id="options">
-        <button><a href="">edit account</a></button>
+        <button><a href="{% url 'profile' %}">Profile</a></button>
     </div>
 {% endblock %}
