--- a/templates/panel/dashboard.html
+++ b/templates/panel/dashboard.html
@@ -5,5 +5,6 @@
 {% block body %}
     <div id="options">
         <button><a href="{% url 'profile' %}">Profile</a></button>
+        <button><a href="{% url 'logout' %}">Logout</a></button>
     </div>
 {% endblock %}
