feat: Email Verification + Add .env + Some other minor changes

--- a/templates/panel/dashboard.html
+++ b/templates/panel/dashboard.html
@@ -6,5 +6,8 @@
     <div id="options">
         <button><a href="{% url 'profile' %}">Profile</a></button>
         <button><a href="{% url 'logout' %}">Logout</a></button>
+        {% if not user.is_active %}
+        <button><a href="{% url 'email_verification' %}">Verify Email Address</a></button>
+        {% endif %}
     </div>
 {% endblock %}
