feat: Password Recovery

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -9,4 +9,5 @@
     {{ login_form.as_p }}
     <button type="submit">Log In</button>
   </form>
+  <a href="{% url 'recover_password' %}">Recover Password</a>
 {% endblock %}
