front-end(templates): Add footer.html & header.html + Modify the website by using Bootstrap 5.3
Changes in a brief:
1- Add profile_image to User class in accounts app (therefore, MEDIA_ROOT, MEDIA_URL and MAX_UPLOAD_SIZE were added in settings).
2- Add footer.html & header.html.
3- Other minor changes to improve front-end of the website.

--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -4,7 +4,7 @@
 
 {% block body %}
   <h2>Sign Up</h2>
-  <form method="post" novalidate>
+  <form enctype="multipart/form-data" method="post" novalidate>
     {% csrf_token %}
     {{ signup_form.as_p }}
     <button type="submit">Sign Up</button>
