--- a/templates/article/edit_article.html
+++ b/templates/article/edit_article.html
@@ -15,6 +15,7 @@
   <div id="md-viewer"></div>
 
 {% endblock %}
-{% block footer %}
+
+{% block js_ref_footer %}
 <script src="{% static 'article/js/article_bundle.js' %}"></script>
 {% endblock %}
