--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,5 @@
 {% block title %}Index Page{% endblock %}
 
 {% block body %}
-  <h1>Index</h1>
-  <p>Hey dude welcome.</p>
-  <div>
-    <a href="{% url 'login' %}">Login Page</a>
-    <a href="{% url 'signup' %}">Sign Up Page</a>
-  </div>
+  <h1 class="text-center">Welcome</h1>
 {% endblock %}
