--- a/templates/article/create_article.html
+++ b/templates/article/create_article.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% load static %}
 
 {% block title %}Create Article{% endblock %}
 
@@ -11,4 +12,10 @@
     <button type="submit">Create Article</button>
   </form>
 
+  <div id="md-viewer"></div>
+
+{% endblock %}
+
+{% block js_ref_footer %}
+<script src="{% static 'article/js/article_bundle.js' %}"></script>
 {% endblock %}
