--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Page Title{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     {% block css_ref %}{% endblock %}
     {% block js_ref %}{% endblock %}
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
+    {% include "components/header.html" %}
     <div id="notification">
         <p>
             {% if notification %}{{notification}}{% endif %}
         </p>
     </div>
-{% block header %}{% endblock %}
 {% block body %}{% endblock %}
-{% block footer %}{% endblock %}
+{% include "components/footer.html" %}
+{% block js_ref_footer %}{% endblock %}
 </body>
 </html>
