--- a/templates/panel/dashboard.html
+++ b/templates/panel/dashboard.html
@@ -9,5 +9,7 @@
         {% if not user.is_email_active %}
         <button><a href="{% url 'email_verification' %}">Verify Email Address</a></button>
         {% endif %}
+        <button><a href="{% url 'create_article' %}">Create Article</a></button>
+        <button><a href="{% url 'articles' user.username %}">Your Articles</a></button>
     </div>
 {% endblock %}
