front-end(templates): Styling html pages using Bootstrap

--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -3,10 +3,11 @@
 {% block title %}Change Password Page{% endblock %}
 
 {% block body %}
-  <h2>Change Password</h2>
-  <form method="post" novalidate>
-    {% csrf_token %}
-    {{ change_password_form.as_p }}
-    <button type="submit">Change Password</button>
-  </form>
+  <div class="container text-center mt-5">
+    <form method="post" novalidate>
+      {% csrf_token %}
+      {{ change_password_form.as_p }}
+      <button class="btn btn-dark" type="submit">Change Password</button>
+    </form>
+  </div>
 {% endblock %}
