--- a/templates/accounts/recover_password.html
+++ b/templates/accounts/recover_password.html
@@ -3,10 +3,11 @@
 {% block title %}Recover Password Page{% endblock %}
 
 {% block body %}
-  <h2>Recover Password</h2>
-  <form method="post" novalidate>
-    {% csrf_token %}
-    {{ recover_password_form.as_p }}
-    <button type="submit">Recover Password</button>
-  </form>
+  <div class="container text-center mt-5"></div>
+    <form method="post" novalidate>
+      {% csrf_token %}
+      {{ recover_password_form.as_p }}
+      <button class="btn btn-dark" type="submit">Recover Password</button>
+    </form>
+  </div>
 {% endblock %}
