--- a/templates/article/edit_article.html
+++ b/templates/article/edit_article.html
@@ -4,16 +4,17 @@
 {% block title %}Edit Article{% endblock %}
 
 {% block body %}
-  <h2>Edit Article</h2>
-
-  <form method="post" novalidate>
-    {% csrf_token %}
-    {{ article_form.as_p }}
-    <button type="submit">Edit Article</button>
-  </form>
-
-  <div id="md-viewer"></div>
-
+  <div class="container">
+    <div class="row">
+      <form class="col-6" method="post" novalidate>
+        {% csrf_token %}
+        {{ article_form.as_p }}
+        <button class="btn btn-dark" type="submit">Edit Article</button>
+      </form>
+  
+      <div class="col-6" id="md-viewer"></div>
+    </div>
+  </div>
 {% endblock %}
 
 {% block js_ref_footer %}
