--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,11 +3,12 @@
 {% block title %}Login Page{% endblock %}
 
 {% block body %}
-  <h2>Log In</h2>
-  <form method="post" novalidate>
-    {% csrf_token %}
-    {{ login_form.as_p }}
-    <button type="submit">Log In</button>
-  </form>
-  <a href="{% url 'recover_password' %}">Recover Password</a>
+  <div class="container text-center mt-5">
+    <form method="post" novalidate>
+      {% csrf_token %}
+      {{ login_form.as_p }}
+      <button class="btn btn-dark" type="submit">Log In</button>
+    </form>
+    <a class="text-decoration-none text-black" href="{% url 'recover_password' %}">Recover Password</a>
+  </div>
 {% endblock %}
