--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -3,10 +3,11 @@
 {% block title %}Sign Up Page{% endblock %}
 
 {% block body %}
-  <h2>Sign Up</h2>
-  <form enctype="multipart/form-data" method="post" novalidate>
-    {% csrf_token %}
-    {{ signup_form.as_p }}
-    <button type="submit">Sign Up</button>
-  </form>
+  <div class="container text-center mt-5">
+    <form enctype="multipart/form-data" method="post" novalidate>
+      {% csrf_token %}
+      {{ signup_form.as_p }}
+      <button class="btn btn-dark" type="submit">Sign Up</button>
+    </form>
+  </div>
 {% endblock %}
