--- a/templates/article/article.html
+++ b/templates/article/article.html
@@ -3,8 +3,19 @@
 {% block title %}{{article.title}}{% endblock %}
 
 {% block body %}
-  <div>{{article.content|safe}}</div>
-  {% if user == article.user %}
-  <a href="{% url 'edit_article' article.slug %}">Edit Article</a>
-  {% endif %}
+  <div class="container">
+    <a href="{% url 'articles' article.user.username %}" class="d-block link-dark text-decoration-none" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+      {% if article.user.profile_image %}
+      <img src="{{ article.user.profile_image.url }}" alt="mdo" width="32" height="32" class="rounded-circle">
+      {% endif %}
+      {{ article.user.username }}
+    </a>
+
+    <div class="mt-3 mb-3">{{article.content|safe}}</div>
+    <hr>
+    {% if user == article.user %}
+    <a href="{% url 'edit_article' article.slug %}"><button class="btn btn-dark">Edit Article</button></a>
+    {% endif %}
+  </div>
+  
 {% endblock %}
