--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -6,9 +6,12 @@
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="{% url 'index' %}" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="{% url 'dashboard' %}" class="nav-link px-2 text-white">Dashboard</a></li>
-          <li><a href="{% url 'create_article' %}" class="nav-link px-2 text-white">Create Article</a></li>
+          <li><a href="{% url 'index' %}" class="nav-link px-2 text-secondary link-secondary">Home</a></li>
+          {% if request.user.last_login %}
+          <li><a href="{% url 'dashboard' %}" class="nav-link px-2 text-white link-primary">Dashboard</a></li>
+          <li><a href="{% url 'create_article' %}" class="nav-link px-2 text-white link-primary">Create Article</a></li>
+          <li><a href="{% url 'articles' request.user.username %}" class="nav-link px-2 text-white link-primary">Your Articles</a></li>
+          {% endif %}
         </ul>
 
         {% if request.user.profile_image %}
