front-end(templates): Styling stuff

--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -6,8 +6,15 @@
   <div class="container text-center mt-5">
     <form method="post" novalidate>
       {% csrf_token %}
-      {{ change_password_form.as_p }}
-      <button class="btn btn-dark" type="submit">Change Password</button>
+      <div class="p-2">
+        {{ change_password_form.new_password }}
+        {{ change_password_form.new_password.errors }}
+      </div>
+      <div class="p-2">
+        {{ change_password_form.confirm_new_password }}
+        {{ change_password_form.confirm_new_password.errors }}
+      </div>
+      <button class="btn btn-dark mt-3 mb-3" type="submit">Change Password</button>
     </form>
   </div>
 {% endblock %}
