--- a/templates/accounts/recover_password.html
+++ b/templates/accounts/recover_password.html
@@ -3,11 +3,14 @@
 {% block title %}Recover Password Page{% endblock %}
 
 {% block body %}
-  <div class="container text-center mt-5"></div>
+  <div class="container text-center mt-5">
     <form method="post" novalidate>
       {% csrf_token %}
-      {{ recover_password_form.as_p }}
-      <button class="btn btn-dark" type="submit">Recover Password</button>
+      <div class="p-2">
+        {{ recover_password_form.email }}
+        {{ recover_password_form.email.errors }}
+      </div>
+      <button class="btn btn-dark mt-3 mb-3" type="submit">Recover Password</button>
     </form>
   </div>
 {% endblock %}
