--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,5 @@
 {% block title %}Index Page{% endblock %}
 
 {% block body %}
-  <h1 class="text-center">Welcome</h1>
+  <h1 class="text-center mt-3">Welcome</h1>
 {% endblock %}
