--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -6,8 +6,28 @@
   <div class="container text-center mt-5">
     <form enctype="multipart/form-data" method="post" novalidate>
       {% csrf_token %}
-      {{ signup_form.as_p }}
-      <button class="btn btn-dark" type="submit">Sign Up</button>
+      <div class="p-2">
+        {{ signup_form.username }}
+        {{ signup_form.username.errors }}
+      </div>
+      <div class="p-2">
+        {{ signup_form.password }}
+        {{ signup_form.password.errors }}
+      </div>
+      <div class="p-2">
+        {{ signup_form.confirm_password }}
+        {{ signup_form.confirm_password.errors }}
+      </div>
+      <div class="p-2">
+        {{ signup_form.email }}
+        {{ signup_form.email.errors }}
+      </div>
+      <div class="p-2">
+        {{ signup_form.profile_image.label }}: 
+        {{ signup_form.profile_image }}
+        {{ signup_form.profile_image.errors }}
+      </div>
+      <button class="btn btn-dark mt-3 mb-3" type="submit">Sign Up</button>
     </form>
   </div>
 {% endblock %}
