--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,10 +1,6 @@
 <header class="p-3 bg-dark text-white">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-        </a>
-
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="{% url 'index' %}" class="nav-link px-2 text-secondary link-secondary">Home</a></li>
           {% if request.user.last_login %}
@@ -15,17 +11,18 @@
         </ul>
 
         {% if request.user.profile_image %}
-        <a href="{% url 'dashboard' %}" class="d-block link-dark text-decoration-none" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+        <a href="{% url 'dashboard' %}" class="d-block text-decoration-none text-white h6">
           <img src="{{ request.user.profile_image.url }}" alt="mdo" width="32" height="32" class="rounded-circle">
+          {{ request.user.username }}
         </a>
         {% endif %}
 
         {% if not request.user.last_login %}
         <div class="text-end">
-          <a href="{% url 'login' %}">
+          <a href="{% url 'login' %}" class="text-decoration-none">
             <button type="button" class="btn btn-outline-light me-2">Login</button>
           </a>
-          <a href="{% url 'signup' %}">
+          <a href="{% url 'signup' %}" class="text-decoration-none">
             <button type="button" class="btn btn-warning">Sign up</button>
           </a>
         </div>
