--- a/templates/panel/edit_profile.html
+++ b/templates/panel/edit_profile.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Profile{% endblock %}
+{% block title %}Edit Profile{% endblock %}
 
 {% block body %}
   <div class="container-fluid row text-center mt-5">
